--- a/APFTestingUI/Areas/Administration/Views/TheoryFormat/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/TheoryFormat/Create.cshtml
@@ -49,16 +49,12 @@
             @Html.ValidationMessageFor(model => model.TimeLimit)
         </div>
         <div class="clear"></div>
-
-        <p class="button-container">
-            <input type="submit" value="Create" class="form-button" />
-        </p>
+        
+        <br/>
+        @Html.ActionLink("Cancel", "Index", new { }, new { @class = "form-button" })
+        <input type="submit" value="Create" class="form-button" />
     </fieldset>
 }
-
-<div>
-    @Html.ActionLink("Back to List", "Index")
-</div>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
