--- a/APFTestingUI/Areas/Administration/Views/Examiner/Edit.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/Examiner/Edit.cshtml
@@ -6,7 +6,6 @@
 }
 
 <h1>Edit Examiner</h1>
-<p>Please fill in the fields below to create a new Pilot Candidate.<br />Asterisks (*) are placed next to required fields.</p>
 
 @using (Html.BeginForm()) {
     @Html.ValidationSummary(false)
@@ -14,9 +13,18 @@
 
     <fieldset>
         <legend>Create</legend>
+        
+        <div class="editor-label">
+            @Html.LabelFor(model => model.APFNumber)
+        </div>
+        <div class="editor-field" style="font-size: 1.3em">
+            @Html.DisplayFor(model => model.APFNumber)
+        </div>
+        <div class="clear"></div>
+        <br/>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.FirstName) <em>*</em>
+            @Html.LabelFor(model => model.FirstName)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.FirstName)
@@ -24,20 +32,14 @@
         <div class="clear"></div>
 
         <div class="editor-label">
-            @Html.LabelFor(model => model.LastName) <em>*</em>
+            @Html.LabelFor(model => model.LastName)
         </div>
         <div class="editor-field">
             @Html.EditorFor(model => model.LastName)
         </div>
         <div class="clear"></div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.APFNumber) <em>*</em>
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.APFNumber)
-        </div>
-        <div class="clear"></div>
+        
 
         <div class="editor-label">
             @Html.LabelFor(model => model.OldPassword)
