--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePacker.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePacker.cshtml
@@ -5,76 +5,25 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Add Question - Packer</h1>
 
-@using (Html.BeginForm("CreatePacker", "QuestionManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    @Html.ValidationSummary(false)
-    @Html.AntiForgeryToken()
+<div id="manage-theory-question-wrap">
+    <h1>Add Theory Question - Packer</h1>
     
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Description) <em>*</em>
-    </div>
-    <div class="editor-field">
-        @Html.EditorFor(model => model.Description)
-    </div>
-    <div class="clear"></div>
-
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Category) <em>*</em>
-    </div>
-    <div class="editor-field">
-        @Html.DropDownListFor(model => model.Category, Model.Categories)
-    </div>
-    <div class="clear"></div>
-    
-    <div class="editor-label">
-        Image <em>*</em>
-    </div>
-    <div class="editor-field">
-        <input type="file" name="ImageFile" accept="image/*" />
-    </div>
-    <div class="clear"></div>
-    
-    <span id="add-answer">Add</span>
-    <table id="answers-table">
-        <thead>
-            <tr>
-                <th>Correct</th>
-                <th>Description</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            @if (Model.Answers == null)
-            {
-                for (int i = 0; i < 2; i++)
-                {
-                    <tr>
-                        <td>@Html.EditorFor(model => model.Answers[i].IsCorrect)</td>
-                        <td>@Html.EditorFor(model => model.Answers[i].Description)</td>
-                        <td class="delete-answer"><span>delete</span></td>
-                    </tr>
-                }
-            }
-            else
-            {
-                for (int i = 0; i < Model.Answers.Count; i++)
-                {
-                    <tr>
-                        <td>@Html.EditorFor(model => model.Answers[i].IsCorrect)</td>
-                        <td>@Html.EditorFor(model => model.Answers[i].Description)</td>
-                        <td class="delete-answer"><span>delete</span></td>
-                    </tr>
-                }
-            }
-            
-            
-        </tbody>
-    </table>
-    
-    <input type="submit" value="Create" class="form-button" />
-}
+    <h2>Question Details</h2>
+    @using (Html.BeginForm("CreatePacker", "QuestionManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        @Html.ValidationSummary(false)
+        @Html.AntiForgeryToken()
+        
+        @Html.Partial("_CreateQuestion", Model)
+        
+        
+        <br />
+        <hr />
+        @Html.ActionLink("Cancel", "IndexPacker", new { }, new { @class="form-button" })
+        <input type="submit" value="Create" class="form-button" />
+    }
+</div>
 
 
 @section scripts
