--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/CreatePilot.cshtml
@@ -7,85 +7,22 @@
 
 
 <div id="manage-theory-question-wrap">
-<h1>Add Theory Question - Pilot</h1>
-
-<h2>Question Details</h2>
-@using (Html.BeginForm("CreatePilot", "QuestionManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
-{
-    @Html.ValidationSummary(false)
-    @Html.AntiForgeryToken()
-
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Description)
-    </div>
-    <div class="editor-field">
-        @Html.TextAreaFor(model => model.Description)
-    </div>
-    <div class="clear"></div>
-
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Category)
-    </div>
-    <div class="editor-field">
-        @Html.DropDownListFor(model => model.Category, Model.Categories)
-    </div>
-    <div class="clear"></div>
+    <h1>Add Theory Question - Pilot</h1>
     
-    <div class="editor-label">
-        Image
-    </div>
-    <div class="editor-field">
-        <input type="file" name="ImageFile" accept="image/*" />
-    </div>
-    <div class="clear"></div>
+    <h2>Question Details</h2>
+    @using (Html.BeginForm("CreatePilot", "QuestionManagement", FormMethod.Post, new { enctype = "multipart/form-data" }))
+    {
+        @Html.ValidationSummary(false)
+        @Html.AntiForgeryToken()
     
-    <br />
-    <hr />
-    <h2>Possible Answers</h2>
-    <table id="answers-table">
-        <thead>
-            <tr>
-                <th class="th-correct-answer">Correct Answer(s)</th>
-                <th colspan="2">Answer Description</th>
-            </tr>
-        </thead>
-
-        <tbody>
-            @if (Model.Answers == null)
-            {
-                for (int i = 0; i < 2; i++)
-                {
-                    <tr>
-                        <td class="td-is-correct">@Html.EditorFor(model => model.Answers[i].IsCorrect)</td>
-                        <td>@Html.EditorFor(model => model.Answers[i].Description)</td>
-                        <td class="delete-answer"><span>delete</span></td>
-                    </tr>
-                }
-            }
-            else
-            {
-                for (int i = 0; i < Model.Answers.Count; i++)
-                {
-                    <tr>
-                        <td class="td-is-correct">@Html.EditorFor(model => model.Answers[i].IsCorrect)</td>
-                        <td>@Html.EditorFor(model => model.Answers[i].Description)</td>
-                        <td class="delete-answer"><span>delete</span></td>
-                    </tr>
-                }
-            }
-            
-            
-        </tbody>
-    </table>
-    <br />
-    <span id="add-answer">+ Add another answer</span><br/><br/>
-    
-    
-    <br />
-    <hr />
-    @Html.ActionLink("Cancel", "IndexPilot", new { }, new { @class="form-button" })
-    <input type="submit" value="Create" class="form-button" />
-}
+        @Html.Partial("_CreateQuestion", Model)
+        
+        
+        <br />
+        <hr />
+        @Html.ActionLink("Cancel", "IndexPilot", new { }, new { @class="form-button" })
+        <input type="submit" value="Create" class="form-button" />
+    }
 </div>
 
 
