--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/DisplayPacker.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/DisplayPacker.cshtml
@@ -5,61 +5,28 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Packer Question</h1>
 
+<div id="manage-theory-question-wrap" class="details">
+    <h1>Packer Question</h1>
+    
+    @Html.Partial("_DisplayQuestion", Model)
 
-<div class="editor-label">
-    @Html.LabelFor(model => model.Description)
-</div>
-<div class="editor-field">
-    @Html.DisplayFor(model => model.Description)
-</div>
-<div class="clear"></div>
-
-<div class="editor-label">
-    @Html.LabelFor(model => model.Category) 
-</div>
-<div class="editor-field">
-    @Html.DisplayFor(model => model.Category)
-</div>
-<div class="clear"></div>
-   
-<div>
-    @{ string path = String.Format("~/QuestionImages/{0}", Model.ImagePath); }
-    @if (Model.ImagePath != null)
-    {
-        <img src="@Url.Content(path)" alt="question image"/>
-    }
 </div>
 
-<table>
-    <thead>
-        <tr>
-            <th>Correct</th>
-            <th>Description</th>
-        </tr>
-    </thead>
+<br />
+<br />
 
-    <tbody>
-        @foreach (var answer in Model.Answers)
-        {
-            <tr>
-                @if (answer.IsCorrect)
-                {
-                    <td>TRUE</td>
-                }
-                else
-                {
-                    <td>FALSE</td>
-                }
-                <td>
-                    @answer.Description
-                </td>
-            </tr>
-        }
-    </tbody>
-</table>
+@Html.ActionLink("Back", "IndexPacker", new { }, new { @class="examiner-button" })
 
+@if (Model.EditableOrDeletable)
+{
+    @Html.ActionLink("Edit", "EditPacker", new { questionId = Model.Id }, new { @class="examiner-button" })
+    @Html.ActionLink("Delete", "DeletePacker", new { questionId = Model.Id }, new { @class="examiner-button delete" })
+}
 
-@Html.ActionLink("Home", "IndexPilot")
+</div>
 
+@section scripts
+{
+    <script src="~/Scripts/administration.js"></script>
+}
