--- a/APFTestingUI/Areas/Administration/Views/QuestionManagement/DisplayPilot.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/QuestionManagement/DisplayPilot.cshtml
@@ -8,63 +8,9 @@
 
 <div id="manage-theory-question-wrap" class="details">
     <h1>Pilot Question</h1>
-        
-    <div class="editor-label">
-        @Html.LabelFor(model => model.Category) 
-    </div>
-    <div class="editor-field">
-        @Html.DisplayFor(model => model.Category)
-    </div>
-    <div class="clear"></div>
     
-    <div class="editor-field question-title">
-        @Html.DisplayFor(model => model.Description)
-    </div>
-    <div class="clear"></div>
-
-
-   
-
-    @{ string path = String.Format("~/QuestionImages/{0}", Model.ImagePath); }
-    @if (Model.ImagePath != null)
-    {
-        <div>
-            <img src="@Url.Content(path)" alt="question image"/>
-        </div>
-    }
-    <table>
-        <thead>
-            <tr>
-                <th>Correct</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @{
-                char alphaCounter = 'A';
-                foreach (var answer in Model.Answers)
-                {
-                    string spanClass;
-                    string spanValue;
-                    if (answer.IsCorrect)
-                    {
-                        spanClass = "is-correct";
-                        spanValue = "Yes";
-                    }
-                    else
-                    {
-                        spanClass = "is-incorrect";
-                        spanValue = "No";
-                    }
-                    <tr>
-                        <td><span class="@spanClass">@spanValue</span></td>
-                        <td class="alphaCounter">@(alphaCounter++))</td>
-                        <td>@answer.Description</td>
-                    </tr>
-                }
-            }
-        </tbody>
-    </table>
+    @Html.Partial("_DisplayQuestion", Model)
+    
 </div>
 
 
