--- a/APFTestingUI/Areas/Administration/Views/TheoryFormat/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/TheoryFormat/Index.cshtml
@@ -5,85 +5,52 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<div id="manage-exam-format-wrap">
+    <h1>Theory Exam Format Management</h1>
 
-<h1>Theory Exam Format Management</h1>
-
-@Html.ActionLink("Add new format", "Create")<br /><br/>
-
-<h3>Pilot Formats</h3>
-<table>
-    <thead>
-        <tr>
-            <th>Active</th>
-            <th>Number of Questions</th>
-            <th>Pass Mark</th>
-            <th>Time Limit</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var format in Model.PilotFormats)
-        {
-
+    @Html.ActionLink("Add new format", "Create", new {}, new { @class="button-add" })<br /><br/>
+    
+    <br/>
+    <h2>Pilot Formats</h2>
+    <table>
+        <thead>
             <tr>
-                <td>@format.IsActive</td>
-                <td>@format.NumberOfQuestions</td>
-                <td>@format.PassMark</td>
-                <td>@format.TimeLimit</td>
-                <td>
-                    @if (format.AllowEditOrDelete)
-                    {
-                        @Html.ActionLink("Edit", "Edit", new { formatId = format.Id })
-                        <text>|</text>
-                        @Html.ActionLink("Delete", "Delete", new { formatId = format.Id }, new { @class = "delete" })
-                    }
-                    @if (!format.IsActive)
-                    {
-                        <text>|</text>
-                        @Html.ActionLink("Activate", "Activate", new { formatId = format.Id }, new { @class = "activate" })
-                    }
-                </td>
+                <th class="status">Status</th>
+                <th class="questions">Number of Questions</th>
+                <th class="pass-mark">Pass Mark</th>
+                <th class="time-limit">Time Limit</th>
+                <th class="edit-delete"></th>
             </tr>
-        }
-    </tbody>
-</table>
-
-<h3>Packer Formats</h3>
-<table>
-    <thead>
-        <tr>
-            <th>Active</th>
-            <th>Number of Questions</th>
-            <th>Pass Mark</th>
-            <th>Time Limit</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var format in Model.PackerFormats)
-        {
-
+        </thead>
+        <tbody>
+            @foreach (var format in Model.PilotFormats)
+            {
+                Html.RenderPartial("_DisplayFormat", format);
+            }
+        </tbody>
+    </table>
+    
+    <br/><br/>
+    
+    <h2>Packer Formats</h2>
+    <table>
+        <thead>
             <tr>
-                <td>@format.IsActive</td>
-                <td>@format.NumberOfQuestions</td>
-                <td>@format.PassMark</td>
-                <td>@format.TimeLimit</td>
-                <td>
-                    @if (format.AllowEditOrDelete)
-                    {
-                        @Html.ActionLink("Edit", "Edit", new { formatId = format.Id })
-                        <text>|</text>
-                        @Html.ActionLink("Delete", "Delete", new { formatId = format.Id }, new { @class = "delete" })
-                    }
-                    @if (!format.IsActive)
-                    {
-                        <text>|</text>
-                        @Html.ActionLink("Activate", "Activate", new { formatId = format.Id }, new { @class = "activate" })
-                    }
-                </td>
+                <th class="status">Status</th>
+                <th class="questions">Number of Questions</th>
+                <th class="pass-mark">Pass Mark</th>
+                <th class="time-limit">Time Limit</th>
+                <th class="edit-delete"></th>
             </tr>
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @foreach (var format in Model.PackerFormats)
+            {
+                Html.RenderPartial("_DisplayFormat", format);
+            }
+        </tbody>
+    </table>
+</div>
 
 @section scripts
 {
