--- a/APFTestingUI/Areas/Administration/Views/AssessmentTask/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/AssessmentTask/Create.cshtml
@@ -43,13 +43,14 @@
 
 
         <p class="button-container">
+            @Html.ActionLink("Cancel", "Index", new { }, new { @class = "form-button" })
             <input class="form-button" type="submit" value="Create" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    
 </div>
 
 @section Scripts {
