--- a/APFTestingUI/Areas/Administration/Views/AssessmentTask/Details.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/AssessmentTask/Details.cshtml
@@ -28,7 +28,7 @@
 
 
 <div id="Assessment-Task-Details-View">
-    <h2>Assessment Task Details</h2>
+    <h1>Assessment Task Details</h1>
 
     @Html.HiddenFor(m => m.Id)
 
@@ -42,12 +42,10 @@
     <div class="clear"></div>
 
 
-    <p class="links">@Html.ActionLink("Back to List","Index")
+    <p class="links">@Html.ActionLink("Back to List","Index", new { }, new { @class = "form-button" })
         @if (Model.Editable) {
-            @:&nbsp;|&nbsp; 
-            @Html.ActionLink("Edit", "Edit", new { id = Model.Id });
-            @:&nbsp;|&nbsp;
-            @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class="link-delete"});
+            @Html.ActionLink("Edit", "Edit", new { id = Model.Id }, new { @class = "form-button" });
+            @Html.ActionLink("Delete", "Delete", new { id = Model.Id }, new { @class="form-button delete"});
         }
     </p>
 
@@ -55,9 +53,5 @@
 
 
 @section Scripts {
-    <script>
-        $('.link-delete').on('click', function(e){
-            return confirm('Are you sure you want to delete this Assessment Task?');
-        })
-    </script>
+    <script src="~/Scripts/administration.js"></script>
 }
