--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Create.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Create.cshtml
@@ -47,6 +47,7 @@
     </table>
     
     <p class="button-container">
-            <input type="submit" value="Create" class="form-button"/>
+        @Html.ActionLink("Cancel", "Index", new { }, new { @class = "form-button" })
+        <input type="submit" value="Create" class="form-button"/>
     </p>
 }
