--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Index.cshtml
@@ -5,50 +5,61 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Packer Practical Templates</h1>
+<div id="manage-exam-format-wrap">
+    <h1>Packer Practical Templates</h1>
 
-<h3>@ViewBag.displayMessage</h3><br />
+    <h3>@ViewBag.displayMessage</h3><br />
 
-@Html.ActionLink("Add new template", "Create")<br /><br/>
+    @Html.ActionLink("Add new template", "Create", new { }, new { @class = "button-add" })<br /><br/>
 
-<table>
-    <thead>
-        <tr>
-            <th></th>
-            <th>Active</th>
-            <th>Number of Required Demonstration Packs</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @{
-            var rowNumber = 1;
-        }
-        @foreach (var template in Model.Templates)
-        {
-
+    <table>
+        <thead>
             <tr>
-                <td>@rowNumber</td>
-                <td>@template.IsActiveText</td>
-                <td>@template.NumOfRequiredAssessmentTasks</td>
-                <td>
-                    @if (template.AllowEditOrDelete)
-                    {
-                        @Html.ActionLink("Edit", "Edit", new { templateId = template.Id })
-                        <text>|</text>
-                        @Html.ActionLink("Delete", "Delete", new { templateId = template.Id }, new { @class = "delete" })
-                    }
-                    @if (!template.IsActive)
-                    {
-                        <text>|</text>
-                        @Html.ActionLink("Activate", "Activate", new { templateId = template.Id }, new { @class = "activate" })
-                    }
-                </td>
+                <th></th>
+                <th>Status</th>
+                <th>Number of Required Demonstration Packs</th>
+                <th></th>
             </tr>
-            rowNumber++;
-        }
-    </tbody>
-</table>
+        </thead>
+        <tbody>
+            @{
+                var rowNumber = 1;
+            }
+            @foreach (var template in Model.Templates)
+            {
+                string rowClass;
+                <tr>
+                    <td>@rowNumber</td>
+                    <td>
+                        @if (template.IsActive)
+                        {
+                            <img src="~/Images/on.png" alt="On button" width="56" height="30" />
+                            rowClass = "row-highlight";
+                        }
+                        else
+                        {
+                            <a href='@Url.Action("Activate", new { templateId = template.Id })'>
+                                <img src="~/Images/off.png" alt="Off button" width="56" height="30" />
+                            </a>
+                            rowClass = "";
+                        }
+                    </td>
+                    <td class="@rowClass">@template.NumOfRequiredAssessmentTasks</td>
+                    <td>
+                        @if (template.AllowEditOrDelete)
+                        {
+                            @Html.ActionLink("Edit", "Edit", new { templateId = template.Id })
+                            <text>|</text>
+                            @Html.ActionLink("Delete", "Delete", new { templateId = template.Id }, new { @class = "delete" })
+                        }
+                    </td>
+                </tr>
+                rowNumber++;
+            }
+        </tbody>
+    </table>
+</div>
+
 
 @section scripts
 {
