--- a/APFTestingUI/Areas/Administration/Views/Examiner/Edit.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/Examiner/Edit.cshtml
@@ -83,6 +83,7 @@
 
         <p class="button-container">
             <span class="control-button-span">
+                @Html.ActionLink("Cancel", "Index", new { }, new { @class = "form-button" })
                 <input type="submit" value="Edit" class="form-button" />
             </span>
         </p>
