--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePacker/Index.cshtml
@@ -45,7 +45,7 @@
                         }
                     </td>
                     <td class="@rowClass">@template.NumOfRequiredAssessmentTasks</td>
-                    <td>
+                    <td class="Practical-Template-Actions">
                         @if (template.AllowEditOrDelete)
                         {
                             @Html.ActionLink("Edit", "Edit", new { templateId = template.Id })
