--- a/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Index.cshtml
+++ b/APFTestingUI/Areas/Administration/Views/PracticalTemplatePilot/Index.cshtml
@@ -52,7 +52,7 @@
                         }
                     </ul>
                 </td>
-                <td>
+                <td class="Practical-Template-Actions">
                     @Html.ActionLink("Display", "Display", new { templateId = Model.Templates[i].Id })
                     @if (Model.Templates[i].AllowEditOrDelete)
                     {
