--- a/APFTestingUI/Views/Examiner/Index.cshtml
+++ b/APFTestingUI/Views/Examiner/Index.cshtml
@@ -83,7 +83,7 @@
                         @if(candidate.PracticalEntered)
                         {
                             <br />
-                            @Html.ActionLink("Finalise Exam", "ViewPilotExamResults", "CompletedExam", new { candidateId = candidate.Id, examId = candidate.LatestExamId, examType = APFTestingModel.ExamType.PackerExam }, new { @class = "examiner-button" })
+                            @Html.ActionLink("Finalise Exam", "ViewPilotExamResults", "CompletedExam", new { candidateId = candidate.Id, examId = candidate.LatestExamId }, new { @class = "examiner-button" })
                         }
                         else if (candidate.LatestExamStatus == APFTestingModel.ExamStatus.EmailInProgress)
                         {
@@ -91,7 +91,7 @@
                             <p>Finalisation Pending</p>
                         } else if (candidate.LatestExamStatus == APFTestingModel.ExamStatus.SendingEmailFailed) {
                             <br />
-                            @Html.ActionLink("Sending Email Failed, Retry", "ViewPilotExamResults", "CompletedExam", new { candidateId = candidate.Id, examId = candidate.LatestExamId, examType = APFTestingModel.ExamType.PackerExam }, new { @class = "examiner-button" })
+                            @Html.ActionLink("Sending Email Failed, Retry", "ViewPilotExamResults", "CompletedExam", new { candidateId = candidate.Id, examId = candidate.LatestExamId }, new { @class = "examiner-button" })
                         }
                     </td>
                 </tr>
